<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:background="@color/light_yellow"
    android:orientation="vertical"
    android:weightSum="5.7">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/main_header"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:src="@drawable/line"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/alumni_sans_regular"
        android:autoSizeTextType="uniform"
        android:lineHeight="18sp"
        android:text="@string/main_page_1"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_marginBottom="5dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/bottle"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            android:weightSum="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="@font/alumni_sans_bold"
                android:textSize="30sp"
                android:text="@string/recycle_name"
                android:layout_weight=".9"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="@font/alumni_sans_regular"
                android:textSize="20sp"
                android:lineHeight="15sp"
                android:text="@string/main_page_2"
                android:layout_weight="1.1"/>
            <Button
                android:id="@+id/recycle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:backgroundTint="@color/mid_green"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/alumni_sans_bold"
                android:text="RECYCLE! →"
                android:padding="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_marginBottom="5dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/recycle"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            android:weightSum="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="@font/alumni_sans_bold"
                android:textSize="30sp"
                android:text="@string/quest_log_name"
                android:layout_weight=".9"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="@font/alumni_sans_regular"
                android:textSize="20sp"
                android:lineHeight="15sp"
                android:text="@string/main_page_3"
                android:layout_weight="1.1"/>
            <Button
                android:id="@+id/learn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:backgroundTint="@color/mid_green"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/alumni_sans_bold"
                android:text="LEARN! →"
                android:padding="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_marginBottom="5dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/green_bot"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            android:weightSum="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="@font/alumni_sans_bold"
                android:textSize="30sp"
                android:text="@string/bot_name"
                android:layout_weight=".9"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="@font/alumni_sans_regular"
                android:textSize="20sp"
                android:lineHeight="15sp"
                android:text="@string/main_page_4"
                android:layout_weight="1.1"/>
            <Button
                android:id="@+id/chat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:backgroundTint="@color/mid_green"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/alumni_sans_bold"
                android:text="CHAT! →"
                android:padding="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_marginBottom="5dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/shop"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            android:weightSum="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="@font/alumni_sans_bold"
                android:textSize="30sp"
                android:text="@string/rewards_name"
                android:layout_weight=".9"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="@font/alumni_sans_regular"
                android:textSize="20sp"
                android:lineHeight="15sp"
                android:text="@string/main_page_5"
                android:layout_weight="1.1"/>
            <Button
                android:id="@+id/shop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:backgroundTint="@color/mid_green"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/alumni_sans_bold"
                android:text="SHOP! →"
                android:padding="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>