<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestsActivity"
    android:background="@color/light_yellow"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="8">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:src="@drawable/quest_log"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/alumni_sans_regular"
        android:autoSizeTextType="uniform"
        android:lineHeight="20sp"
        android:text="@string/quest_log_1"
        android:textColor="@color/mid_green"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:src="@drawable/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:weightSum="5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/alumni_sans_bold"
            android:textSize="30sp"
            android:lineHeight="20sp"
            android:text="@string/quest_log_2"
            android:textColor="@color/mid_green"
            android:layout_weight="4"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"/>
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:backgroundTint="@color/mid_green"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/alumni_sans_bold"
            android:text="→"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:weightSum="5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_weight="4"
            android:textSize="30sp"
            android:fontFamily="@font/alumni_sans_bold"
            android:gravity="center_vertical"
            android:lineHeight="20sp"
            android:text="@string/quest_log_3"
            android:textColor="@color/mid_green" />
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:backgroundTint="@color/mid_green"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/alumni_sans_bold"
            android:text="→"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:weightSum="5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/alumni_sans_bold"
            android:textSize="30sp"
            android:lineHeight="20sp"
            android:text="@string/quest_log_4"
            android:textColor="@color/mid_green"
            android:layout_weight="4"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:backgroundTint="@color/mid_green"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/alumni_sans_bold"
            android:text="→"
            android:padding="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:weightSum="5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/alumni_sans_bold"
            android:textSize="30sp"
            android:lineHeight="20sp"
            android:text="@string/quest_log_5"
            android:textColor="@color/mid_green"
            android:layout_weight="4"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"/>
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:backgroundTint="@color/mid_green"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/alumni_sans_bold"
            android:text="→"
            android:padding="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:weightSum="5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/alumni_sans_bold"
            android:textSize="30sp"
            android:lineHeight="20sp"
            android:text="@string/quest_log_6"
            android:textColor="@color/mid_green"
            android:layout_weight="4"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:backgroundTint="@color/mid_green"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/alumni_sans_bold"
            android:text="→"
            android:padding="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:weightSum="5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/alumni_sans_bold"
            android:textSize="30sp"
            android:lineHeight="20sp"
            android:text="@string/quest_log_7"
            android:textColor="@color/mid_green"
            android:layout_weight="4"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:backgroundTint="@color/mid_green"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/alumni_sans_bold"
            android:text="→"
            android:padding="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:weightSum="5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/alumni_sans_bold"
            android:textSize="30sp"
            android:lineHeight="20sp"
            android:text="@string/quest_log_8"
            android:textColor="@color/mid_green"
            android:layout_weight="4"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"/>
        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:backgroundTint="@color/mid_green"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/alumni_sans_bold"
            android:text="→"
            android:padding="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0.7">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            app:tint="@color/mid_green"
            android:src="@drawable/arrow_left"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"/>
        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/circle"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/mid_green"
            android:layout_gravity="center_vertical"/>
        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/circle"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"/>
        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/circle"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"/>
        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/circle"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"/>
        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/circle"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            app:tint="@color/mid_green"
            android:src="@drawable/arrow_right"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:src="@drawable/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:backgroundTint="@color/mid_green"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/alumni_sans_bold"
            android:text="← HOME"
            android:padding="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"/>
        <Button
            android:id="@+id/shop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:backgroundTint="@color/mid_green"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/alumni_sans_bold"
            android:text="SHOP →"
            android:padding="0dp"
            android:layout_weight="1"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
</LinearLayout>